--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "express-sessions": "^1.0.6",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.2"
