--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "techiestoday",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Description",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/linklg1/TechiesToday.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/linklg1/TechiesToday/issues"
+  },
+  "homepage": "https://github.com/linklg1/TechiesToday#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
